Bug 405828 - Budget problems
Summary: Budget problems
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-24 19:05 UTC by pdmoerman
Modified: 2019-04-20 16:50 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.4
Sentry Crash Report:


Attachments
Picture of the bug (287.73 KB, image/png)
2019-03-24 19:05 UTC, pdmoerman
Details
Budget widget screenshot (63.68 KB, image/png)
2019-04-19 15:56 UTC, Mattia
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pdmoerman 2019-03-24 19:05:47 UTC
Created attachment 119008 [details]
Picture of the bug

SUMMARY
The budget feature does not show totals like it did in version 4. Also, the balance total is off. And finally, the budget widget does not work to show budget overruns because the budget is not working. I feel like this last issue might be fixed by fixing the budget


STEPS TO REPRODUCE
1. Open KMyMoney
2. Go to budget
3. 

OBSERVED RESULT
Totals don't show in budget summary screen like they did in version 4, and the total balance is wrong.

EXPECTED RESULT
Budget section totals should show and the budget balance should equal income-expenses

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Ubuntu 18.04 64bit
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Mattia 2019-04-18 15:53:50 UTC
In 5.0.3 the totals are working, but the widget still doesn't show budget overruns in categories (only the total overrun works).
Comment 2 Thomas Baumgart 2019-04-19 05:17:05 UTC
I may not completely understand your comment, but showing overruns in this widget was never intended. Can you elaborate why you think it is not working? How would you envision the overrun should be identified?
Comment 3 Mattia 2019-04-19 15:56:31 UTC
Created attachment 119506 [details]
Budget widget screenshot

(In reply to Thomas Baumgart from comment #2)
> I may not completely understand your comment, but showing overruns in this
> widget was never intended. Can you elaborate why you think it is not
> working? How would you envision the overrun should be identified?

In KMyMoney 4.x the widget used to show the monthly summary and the categories for which the budget was overrun in the month.
Now it only shows the monthly summary, but in the categories table it always shows "No budget categories have been overrun" even if there are actually some categories for which the budget has been overrun.
Comment 4 Thomas Baumgart 2019-04-20 16:50:25 UTC
Git commit 7753b10ccd3f3efe4d9b22173c2b5368ecfc972e by Thomas Baumgart.
Committed on 20/04/2019 at 16:45.
Pushed by tbaumgart into branch '5.0'.

Use correct column to extract budget values for home page
FIXED-IN: 5.0.4

M  +5    -4    kmymoney/plugins/views/reports/reportsview.cpp

https://commits.kde.org/kmymoney/7753b10ccd3f3efe4d9b22173c2b5368ecfc972e