Use correct column to extract budget values for home page

BUG: 405828
FIXED-IN: 5.0.4